--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
@@ -58,7 +58,7 @@
                                     <li>
                                         <ul class="menu" id="notification-list"></ul>
                                     </li>
-                                    <li class="footer"><a href="#">View all</a></li>
+                                    @*<li class="footer"><a href="#">View all</a></li>*@
                                 </ul>
                             </li>
                             <!-- User Account Menu -->
