--- a/TMS/TMS/Areas/Technician/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Shared/_TopLayout.cshtml
@@ -56,7 +56,7 @@
                                             
                                         </ul>
                                     </li>
-                                    <li class="footer"><a href="#">View all</a></li>
+                                    @*<li class="footer"><a href="#">View all</a></li>*@
                                 </ul>
                             </li>
                             <!-- User Account Menu -->
